--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="libs/json2.4/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="libs/json2.4/ezmorph-1.0.6.jar"/>
 	<classpathentry kind="lib" path="libs/json2.4/json-lib-2.4-jdk15.jar"/>
+	<classpathentry kind="lib" path="libs/jedis-2.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
